<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/To"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_weight="9"
                    android:fontFamily="sans-serif"
                    android:inputType="phone"
                    android:paddingLeft="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18dp"
                    android:layout_marginRight="48dp"
                    android:id="@+id/edit"
                    android:hint="Phone number"
                    />

            </LinearLayout>

            <Button

                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:text="@string/apology"
                android:textAlignment="center"
                android:textSize="32dp"
                android:onClick="apology"
                android:layout_marginTop="100dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#979193"
                android:layout_marginTop="16dp"/>

            <Button

                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:text="@string/thank"
                android:textAlignment="center"
                android:textSize="32dp"
                android:onClick="thank"
                android:layout_marginTop="32dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#979193"
                android:layout_marginTop="16dp"/>

            <Button

                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:text="@string/busy"
                android:textAlignment="center"
                android:textSize="32dp"
                android:onClick="busy"
                android:layout_marginTop="32dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#979193"
                android:layout_marginTop="16dp"/>

            <Button

                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:text="@string/birthday"
                android:textAlignment="center"
                android:textSize="28dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:onClick="bday"
                android:layout_marginTop="32dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#979193"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end"
                android:textSize="18dp"
                android:textAlignment="center"/>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>